# takemehome

./: README.md  people.db  pyproject.toml
takemehome/: database.py  main.py  ui.py
